# Model-Quantizer

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  main.py  pyproject.toml
artifacts/benchmarks/gemma-2-9b/int4_grouped/: mmlu.summary.json
artifacts/benchmarks/mistral-7b/int4_grouped/: hellaswag.summary.json
artifacts/benchmarks/mistral-7b/raw/: hellaswag.summary.json
artifacts/benchmarks/phi-3/int4_grouped/: hellaswag.summary.json  mmlu.summary.json
artifacts/benchmarks/phi-3/int8_per_channel/: hellaswag.summary.json  mmlu.summary.json
artifacts/benchmarks/phi-3/int8_per_tensor/: hellaswag.summary.json  mmlu.summary.json
artifacts/benchmarks/phi-3/raw/: hellaswag.summary.json  mmlu.summary.json
config/: default.yaml
docker/: run_pipeline_and_benchmarks.sh
model_quantizer/: __init__.py  cli.py  configuration.py
model_quantizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
model_quantizer/artifacts/: __init__.py  cleanup.py  loader.py  manager.py
model_quantizer/benchmarks/: __init__.py  runner.py
model_quantizer/download/: downloader.py
model_quantizer/inference/: __init__.py  runner.py
model_quantizer/pipeline/: runner.py
model_quantizer/quantization/: __init__.py  base.py  common.py  gptq.py  int4.py  int8.py
model_quantizer/runtime/: __init__.py  loader.py
model_quantizer/utils/: device.py  filesystem.py  logging_utils.py
