[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "model-quantizer"
version = "0.1.0"
description = "Config-driven tooling for downloading and quantizing LLMs with multiple methods."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "accelerate>=1.0.0",
  "huggingface-hub>=0.24.0",
  "PyYAML>=6.0.1",
  "safetensors>=0.4.3",
  "torch>=2.3.0",
  "transformers>=4.57.0",
  "typing_extensions>=4.9.0",
]

[project.scripts]
model-quantizer = "model_quantizer.cli:main"

[tool.setuptools.packages.find]
include = ["model_quantizer*"]
